Thu 25 Jan 09:43:30 2007 GMT Jim Segrave <jes@j-e-s.net>
	* gnubg.c - restore some code dropped some revisions ago
	
Sun Jan 05 10:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* eval.c: Fix some concurrency problems.

Fri Jan 05 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* analysis.c multithread.c: Add multi-thread compatiblity for game analysis.

Fri Dec 29 12:51:42 CET 2006 Christian Anthon <anthon@kiku.dk>

	* lib/Makefile.am, lib/fifo.[ch], lib/buffer.[ch]: removed as they are
	not used anymore.

Thu Dec 28 10:03:36 CET 2006 Christian Anthon <anthon@kiku.dk>

	* common.h, board3d/matrix.c, board3d/matrix.h, lib/fifo.c,
	lib/fifo.h, lib/neuralnet.c: small linux compile fixes after last
	commit.

Tue Dec 26 11:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* lib/board3d: Run through lint, added consts to pointers and
		made some int's unsigned.

Wed Dec 20 10:06:46 CET 2006 Christian Anthon <anthon@kiku.dk>

	* */: add some filenames to .cvsignore

Wed Dec 20 09:25:49 CET 2006 Christian Anthon <anthon@kiku.dk>

	* non-src/: updated the flex/bison files to versions supplied by Ingo

Tue Dec 19 23:30:58 CET 2006 Christian Anthon <anthon@kiku.dk>

	* configure.in: fix small python and png problems

Tue Dec 19 12:03:14 CET 2006 Christian Anthon <anthon@kiku.dk>

	* configure.in, common.h, render.c, lib/neuralnet.c: declare signbit
	and lrint as macros if undeclared

Mon Dec 18 23:58:05 2006 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* analysis.c: fix casts and parens in relativeFibsRating
	
Sun Dec 16 20:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkmovelist.c: Fix for bug #18526 s

Thu Dec 14 17:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkmovelist.c: Fix for bug #17845 multiple highlights in hint
	* import.c: Small partygammon fix
	* gnubg.c: Fix for bug #12131 menus while analysing games

Tue Dec 12 15:54:22 CET 2006 Christian Anthon <anthon@kiku.dk>
