@@ -1,4 +1,10 @@
+Thu Jan 25 20:27:53 CET 2007 Christian Anthon <anthon@kiku.dk>
+
+	* makehyper.c, lib/neuralnet*.c: small fixes needed to compile without
+	threads on linux
+
 Thu 25 Jan 09:43:30 2007 GMT Jim Segrave <jes@j-e-s.net>
+
 	* gnubg.c - restore some code dropped some revisions ago
 	
 Sun Jan 05 10:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
